# jpeg-hdr

./: Makefile  README.md  hdr.c  jpegapi.c  jpegapi.h  main.c
opencl_parallel/: CMakeLists.txt  hdr.c  hdr.h  jpegapi.h  kernel.cl  main-old.c  main.c  openclwrap.c  openclwrap.h
openmp_parallel/: -g  Makefile  gmon.out  hdr.c  main.c  script.sh
pthreads/: Makefile  gmon.out  hdr.c  hdr.h  jpegapi.c  main  main.c
serial/: gmon.out  gprof_result.txt  hdr.c  hdr.h  main
